thay doi lai 1 it

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
@@ -13,10 +12,21 @@
     <section class="profile">
         <img src="images/IMG_0548.jpg" alt="Ảnh của tôi">
         <h2>Xin chào! Tôi là Khang</h2>
-        <p>Sinh ngày: <strong>19/12/2003</strong></p>
-        <p>Tôi hiện là sinh viên năm 4, ngành Công nghệ Thông tin, chuyên ngành Công nghệ Phần mềm.</p>
+        <p><strong>Sinh ngày:</strong> 19/12/2003</p>
+        <p><strong>Ngành học:</strong> Công nghệ Thông tin - Công nghệ Phần mềm</p>
         <p>Đam mê lập trình, công nghệ và phát triển phần mềm.</p>
+        <p>Có nhiều kinh nghiệm trong các hướng kiểm thử.</p>
     </section>
+    
+    <section class="skills">
+        <h2>Kỹ Năng</h2>
+        <div class="skill-list">
+            <div class="skill">🎨 Thiết kế giao diện UI</div>
+            <div class="skill">🔍 Kiểm thử phần mềm</div>
+            <div class="skill">🤖 Ứng dụng AI trong thiết kế</div>
+        </div>
+    </section>
+    
     <footer>
         <p>&copy; 2025 - Huynh Nguyen Quoc Khang</p>
     </footer>
